classDiagram
    direction LR

    class NegocioUnificado {
        <<Domain Model>>
        +negocioId: Integer
        +nombre: String
        +databaseIp: String
        +databasePort: String
        +databaseName: String
        +databaseUsername: String
        +backup: Byte
        +tenantId: String
    }

    class NegocioUnificadoEntity {
        <<JPA Entity>>
        +negocioId: Integer
        +nombre: String
        +databaseIp: String
        +databasePort: String
        +databaseName: String
        +databaseUsername: String
        +backup: Byte
        +tenantId: String
    }

    class NegocioUnificadoMapper {
        +toDomain(NegocioUnificadoEntity): NegocioUnificado
        +toEntity(NegocioUnificado): NegocioUnificadoEntity
    }

    class NegocioUnificadoResponse {
        <<Response DTO>>
        +negocioId: Integer
        +nombre: String
        +databaseIp: String
        +databasePort: String
        +databaseName: String
        +databaseUsername: String
        +backup: Byte
        +tenantId: String
    }

    class NegocioUnificadoDtoMapper {
        +toResponse(NegocioUnificado): NegocioUnificadoResponse
    }

    NegocioUnificadoMapper --> NegocioUnificadoEntity
    NegocioUnificadoMapper --> NegocioUnificado
    NegocioUnificadoDtoMapper --> NegocioUnificado
    NegocioUnificadoDtoMapper --> NegocioUnificadoResponse
